# REF-2021-data-explorer

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml  pylint.yml
.streamlit/: config.toml
src/: Home.py  chat.py  codebook.py  process.py  read_write.py  shared.py  shared_content.py  shared_text.py  visualisations.py
src/REF2021_explorer/: Home.py  chat.py  codebook.py  process.py  read_write.py  shared_content.py  visualisations.py
src/REF2021_explorer/pages/: 10_Results_Chat.py  1_Research_Groups.py  1_Results.py  2_Outputs.py  3_Impact_Case_Studies.py  4_Doctoral_Degrees_Awarded.py  4_Research_Income.py  5_Research_Income.py  6_Institution_environment_statements.py  6_Research_Income_in_Kind.py  7_Institution_environment_statements.py  8_Results.py  8_UoA_environment_statements.py  9_Results.py  9_Results_Chat.py
src/pages/: 10_Results_Chat.py  1_Research_Groups.py  2_Outputs.py  3_Impact_Case_Studies.py  4_Doctoral_Degrees_Awarded.py  5_Research_Income.py  6_Research_Income_in_Kind.py  7_Institution_environment_statements.py  7_Results.py  8_Chat.py  8_Results_Chat.py  8_UoA_environment_statements.py  9_Results.py
