[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "REF2021_explorer"
version = "0.0.1"
authors = [
  { name="Mihaela Duta", email="mihaela.duta@dtc.ox.ac.uk" },
]
description = "A streamlit app to explore the REF 2021 processsed data"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD 3-Clause License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Hidden-REF/REF-2021-data-explorer"
"Bug Tracker" = "https://github.com/Hidden-REF/REF-2021-data-explorer/issues"